  situations where some documents do not have values for fields wrapped in other value 
  sources.  Users who want to preserve the previous behavior may need to wrap fields
  in the "def()" function. Example: changing "fl=sum(fieldA,fieldB)" to 
  "fl=sum(def(fieldA,0.0),def(fieldB,0.0))".  See LUCENE-5961 for more details.

Detailed Change List
----------------------

New Features
----------------------

* SOLR-5287: You can edit files in the conf directory from the admin UI.
  (Erick Erickson, Stefan Matheis)
  Additional work:
  - SOLR-5446: Admin UI - Allow changing Schema and Config (steffkes)
  - SOLR-5458: Admin UI - Remove separated Pages for Config & Schema (steffkes)
  - SOLR-5456: Admin UI - Allow creating new Files (steffkes)
  - SOLR-5518: Added EditFileRequestHandler to deal with security issues around
    modifying solr configuration files.  (Erick Erickson)
  - SOLR-5539: Admin UI - Remove ability to create/modify files (steffkes)

* SOLR-6103: Added DateRangeField for indexing date ranges, especially
  multi-valued ones. Based on LUCENE-5648. (David Smiley)

* SOLR-6403: TransactionLog replay status logging. (Mark Miller)

* SOLR-4580: Support for protecting content in ZooKeeper. (Per Steffensen, Mark Miller)

* SOLR-6365: specify appends, defaults, invariants outside of the request handler.
  (Noble Paul, Erik Hatcher, shalin)

* SOLR-5097: Schema API: Add REST support for adding dynamic fields to the schema.
  (Steve Rowe)

* SOLR-5098: Schema API: Add REST support for adding field types to the schema.
  (Timothy Potter)

* SOLR-5473 : Split clusterstate.json per collection and watch states selectively
  (Noble Paul, Mark Miller, shalin, Jessica Cheng Mallet, Timothy Potter, Anshum Gupta)

* SOLR-5474 : Support for SOLR-5473 in SolrJ (Timothy Potter, Noble Paul, Mark Miller)

* SOLR-5810 : Support for SOLR-5473 in solr admin UI (Timothy Potter, Noble Paul)

* SOLR-6482:  Add an onlyIfDown flag for DELETEREPLICA collections API command